Datepicker visible and some other fixes

--- a/Billing.Web/styles/sidebar.css
+++ b/Billing.Web/styles/sidebar.css
@@ -37,6 +37,7 @@
     padding: 15px;
     width: 100%;  
     overflow-x: hidden; 
+    height: 1000px;
 }
 .xyz{
     min-width: 360px;
